<resources>
    <string name="app_name">proje</string>
    <string name="başlik">Eminem</string>
    <string name="tupac1">One of the top-selling artists of all time, rapper and actor Tupac Shakur embodied the 1990s gangsta-rap aesthetic and, in death, has become an icon symbolizing noble struggle. Tupac began his music career as a rebel with a cause to articulate the still-relevant travails and injustices endured by many Black Americans. The boundaries between his art and life became increasingly blurred, as Shakur faced legal problems and jail time. On his fourth album, All Eyez On Me, Tupac leaned fully into celebrating the thug lifestyle. It was the last album Tupac would live to see released. On September 7, 1996, the 25-year-old was gunned down in Las Vegas and died six days later. Police continue to investigate his murder.</string>
    <string name="tupac2">FULL NAME: Tupac Amaru Shakur (born Lesane Parish Crooks)
BORN: June 16, 1971
DIED: September 13, 1996
BIRTHPLACE: New York, New York
SPOUSE: Keisha Morris (1995-1996)
ASTROLOGICAL SIGN: Gemini</string>
    <string name="tupac3">Tupac Amaru Shakur was born Lesane Parish Crooks on June 16, 1971, in New York City’s Harlem neighborhood. His mother, Afeni Shakur, had been a political activist and Black Panther Party member who was arrested in 1969 for allegedly planning coordinated attacks on police stations and offices in New York City. She became pregnant with Tupac while out on bail, and she was acquitted in 1971 after defending herself in court.</string>
    <string name="tupac4">When Lesane was 1 year old, Afeni changed his name to Tupac Amaru after a Peruvian revolutionary who was killed by the Spanish. She said of the name: “I wanted him to have the name of revolutionary, indigenous people in the world. I wanted him to know he was part of a world culture and not just from a neighborhood.” Tupac later took his surname from his sister Sekyiwa’s father, another Black Panther named Mutulu Shakur. Tupac also had a stepbrother, Mopreme.

Tupac’s father, Billy Garland, lost contact with Afeni when Tupac was 5, and he didn’t see his dad again until he was 23. “I thought my father was dead all my life,” he told the writer Kevin Powell during an interview with Vibe magazine in 1996. “I felt I needed a daddy to show me the ropes, and I didn’t have one.” Raising Tupac and his half-sister alone, Afeni worked as a paralegal before developing a crack cocaine addiction in the early 1980s. The family had to move often, struggling for money and living off welfare because she couldn’t keep a job.</string>
    <string name="tupac5">Tupac, who only released four albums in his lifetime, has 21 albums to his name, 10 of which have earned platinum, multiplatinum, or diamond certification. As of July 2023, the Recording Industry Association of America listed Tupac as the 45th top-selling artist of all-time by album sales and streaming figures. Worldwide, more than 75 million Tupac records have sold to date, according to Forbes.



</string>
    <string name="içerik4"><![CDATA[Eminem\\\'s greatest triumph came in 2002, when he won rave reviews for his starring role in the film 8 Mile, which was loosely based on his life. "Lose Yourself," which he wrote for the movie, won an Academy Award for Best Original Song, the first for hip-hop. Prior to that success, albums The Marshall Mathers LP and The Eminem Show were nominated for Grammys, among his 44 nominations to date.]]></string>
    <string name="içerik3">The Slim Shady LP in 1999 was an immediate success, winning the first of his 15 Grammy Awards and courting protests for lyrics that were seen as excessively violent and profane, anti-female, anti-gay and anti-religious. Eminem fed on the furor caused by his subsequent recordings, gradually adding pointed political commentary to the mix.</string>
    <string name="içerik2"><![CDATA[Eminem\'s first album, the positive-minded Infinite, came out in 1996, but it was his follow-up The Slim Shady EP, along with a second-place finish at the Rap Olympics in Los Angeles that caught the attention of West Coast rap mastermind Dr. Dre, who signed Eminem to a major label deal.]]></string>
    <string name="içerik1">Eminem has made history in hip-hop and in all of popular music. Called the best-selling hip-hop artist of all time, he is also one of the most popular rappers. With a fierce lyrical flow and a fearless songwriting sensibility driven by an audacious sense of humor and a bold intellect, his music has generated plenty of controversy.</string>
    <string name="içerik6">In 2000 Eminem released The Marshall Mathers LP, which set a record in the United States for the fastest-selling rap album. The incredible success of the album, which included the provocative hit singles “The Real Slim Shady” and “Stan,” brought more controversy. To silence critics, in 2001 Eminem performed a duet with openly gay musician Elton John at the Grammy Awards, where The Marshall Mathers LP was nominated for best album of the year. Later that year he recorded the album Devil’s Night with D12 and toured with the group. He also created his own record label, Shady Records. The D12 collective, 50 Cent, and other rappers signed to and released albums with the label.</string>
    <string name="içerik5">Eminem returned in 2002 with The Eminem Show, which proved to be nearly as popular as The Marshall Mathers LP. Also that year he made his acting debut in the semiautobiographical 8 Mile. The gritty film was a critical and commercial success. The following year he won an Academy Award for “Lose Yourself,” a song featured in the movie. After reteaming with D12 for D12 World (2004), Eminem released Encore (2004) and a greatest-hits set, Curtain Call: The Hits (2005), both of which sold well but failed to garner as much attention as his previous albums had. He then stepped out of the public eye, resurfacing briefly in 2006 to eulogize friend and D12 member Proof, who was killed outside a Detroit nightclub. Two years later Eminem published the memoir The Way I Am, which included photos, drawings, and lyrics.</string>
    <string name="içerik7">Music is a form of art and cultural expression that utilizes organized sound elements, such as melody, harmony, rhythm, and timbre, to evoke emotions, convey ideas, and communicate messages. It has been an integral part of human civilization for centuries, playing a significant role in various aspects of society, including entertainment, religious rituals, celebrations, and personal expression.

Key components of music include:

Melody: The sequence of musical notes that form a recognizable and often memorable tune.
Harmony: The combination of different musical notes played or sung simultaneously, creating a pleasing sound.
Rhythm: The arrangement of sounds and silences in time, creating a sense of beat, tempo, and meter.
Dynamics: The variations in volume and intensity within a piece of music, adding emotional depth and contrast.
Timbre: The unique quality or color of a sound, which distinguishes one instrument or voice from another.
Form: The overall structure of a musical composition, often characterized by repeated sections such as verses, choruses, and bridges.
Genre: Music is classified into various genres based on stylistic characteristics, cultural influences, and historical context. Common genres include classical, jazz, pop, rock, hip-hop, electronic, and many more.
Throughout history, different cultures and civilizations have developed their own musical traditions, instruments, and styles. Advances in technology have led to the evolution of music production and distribution, from traditional sheet music and live performances to recorded formats and digital platforms.

Music has the power to evoke a wide range of emotions, inspire creativity, and foster a sense of community. It serves as a universal language that transcends cultural and linguistic barriers, allowing people from diverse backgrounds to connect and share experiences. The appreciation of music is subjective, and individuals may have varying preferences based on personal taste, cultural background, and life experiences.

In contemporary times, the music industry is a dynamic and globalized entity, with artists, producers, and listeners connected through various platforms and mediums. The influence of music extends beyond entertainment, playing a role in social and political movements, cultural identity, and personal well-being.</string>
</resources>